--- a/prog1.ipynb
+++ b/prog1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5cdf1900",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f14ff8e8",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8807dc4e",
    "metadata": {},
    "outputs": [],
@@ -46,180 +46,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "fe80fdd4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sommeCube(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4f8189fc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sommeCube2(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2e497f56",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sommeSimple(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "5234f385",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n",
-      "Tout va au mieux.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(100):\n",
     "    if sommeCube2(i) != sommeSimple(i) ** 2:\n",
@@ -233,7 +93,31 @@
    "id": "a2b40846",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "\n",
+    "\n",
+    "tir = 1\n",
+    "NbTirsDqnsLeDisque = 0\n",
+    "\n",
+    "while (tir < 100000):\n",
+    "    tir += 1\n",
+    "    # On tire au hasard un point du quart de carre [0, 1] * [0,1]\n",
+    "    x = random.random()\n",
+    "    y = random.random()\n",
+    "    # On compte le nombre de fois ou l'on est dans le disque.\n",
+    "    if (x**2 + y**2 <= 1):\n",
+    "        NbTirsDqnsLeDisque += 1\n",
+    "\n",
+    "\"\"\" la probabilite que le point tire au hasard soit dans\n",
+    "le quart  du disque est egale a l'aire du quart du \n",
+    "cercle sur l'aire du carre soit pi/4.\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "pi = 4*NbTirsDqnsLeDisque / tir\n",
+    "print(\"Valeur experimentale de pi : %0.3f\" %pi)"
+   ]
   }
  ],
  "metadata": {
