--- a/prog1.ipynb
+++ b/prog1.ipynb
@@ -122,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +136,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b98f3443e6ca3d3ca98e540930ca10665b0b96d9ae1d82db1255623d84501ce5"
+   }
   }
  },
  "nbformat": 4,
